# WisePenCloud-AI-Demo

./: .gitignore  main.py  pyproject.toml
services/wisepen-chat-service/: pyproject.toml  wisepen-chat-service.nacos.yaml
services/wisepen-chat-service/src/chat/: .env.example  container.py  main.py
services/wisepen-chat-service/src/chat/api/: router.py  vercel_formats.py
services/wisepen-chat-service/src/chat/api/endpoints/: chat.py  memory.py  model.py  session.py
services/wisepen-chat-service/src/chat/api/schemas/: chat.py  memory.py  session.py
services/wisepen-chat-service/src/chat/api/v1/: router.py
services/wisepen-chat-service/src/chat/application/: chat_orchestrator.py  chat_post_processor.py  context_manager.py  llm_runner.py
services/wisepen-chat-service/src/chat/application/tools/: __init__.py  registry.py  search_history.py
services/wisepen-chat-service/src/chat/core/config/: app_settings.py  bootstrap_settings.py
services/wisepen-chat-service/src/chat/core/persistence/: __init__.py
services/wisepen-chat-service/src/chat/domain/: error_codes.py
services/wisepen-common/: pyproject.toml
services/wisepen-common/src/common/: logger.py
services/wisepen-common/src/common/cloud/: __init__.py  nacos_client.py
services/wisepen-common/src/common/core/: constants.py  exceptions.py
services/wisepen-common/src/common/gray/: context.py
services/wisepen-common/src/common/security/: __init__.py  context.py  dependencies.py  exceptions.py
services/wisepen-common/src/common/web/: exception_handlers.py
(+28 files in other folders)
