[project]
name = "wisepen-common"
version = "0.1.0"
description = "WisePen Common Library for Python Microservices"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jiazheng Sun", email = "jzsun24@m.fudan.edu.cn" }
]
dependencies = [
    "fastapi",    # 鉴权 Middleware 中需要用到 Request 和 Response
    "starlette",  # FastAPI 的底层，BaseHTTPMiddleware 依赖它
    "pydantic",    # 预留给未来 Common 包里可能需要的通用 DTO/VO 模型
    "loguru",
]
